orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Financial_Account__c/Financial_Account__c.object-meta.xml
<CustomObject>
    <description>Individual financial accounts - IRA, brokerage, annuity, etc.</description>
    <label>Financial Account</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>