orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Financial_Account__c/fields/Account_Number_Masked__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Masked__c</fullName>
    <label>Account Number</label>
    <type>Text</type>
    <length>20</length>
</CustomField>