orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Financial_Account__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Traditional IRA</fullName><default>false</default><label>Traditional IRA</label></value>
            <value><fullName>Roth IRA</fullName><default>false</default><label>Roth IRA</label></value>
            <value><fullName>401(k)</fullName><default>false</default><label>401(k)</label></value>
            <value><fullName>403(b)</fullName><default>false</default><label>403(b)</label></value>
            <value><fullName>Individual Brokerage</fullName><default>false</default><label>Individual Brokerage</label></value>
            <value><fullName>Joint Brokerage</fullName><default>false</default><label>Joint Brokerage</label></value>
            <value><fullName>Trust</fullName><default>false</default><label>Trust</label></value>
            <value><fullName>Annuity</fullName><default>false</default><label>Annuity</label></value>
            <value><fullName>529 Plan</fullName><default>false</default><label>529 Plan</label></value>
            <value><fullName>External</fullName><default>false</default><label>External (Aggregated)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>