orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Financial_Account__c/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <label>Current Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>