orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Financial_Account__c/fields/Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodian__c</fullName>
    <label>Custodian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Ameriprise</fullName><default>true</default><label>Ameriprise</label></value>
            <value><fullName>Fidelity</fullName><default>false</default><label>Fidelity</label></value>
            <value><fullName>Schwab</fullName><default>false</default><label>Schwab</label></value>
            <value><fullName>Vanguard</fullName><default>false</default><label>Vanguard</label></value>
            <value><fullName>TD Ameritrade</fullName><default>false</default><label>TD Ameritrade</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>