orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Financial_Account__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <label>Household</label>
    <type>Lookup</type>
    <referenceTo>Client_Household__c</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
</CustomField>