orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Financial_Account__c/fields/Is_Liquid__c.field-meta.xml
<CustomField>
    <fullName>Is_Liquid__c</fullName>
    <label>Is Liquid</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>