orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Financial_Account__c/fields/Primary_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Primary_Beneficiary__c</fullName>
    <label>Primary Beneficiary</label>
    <type>Text</type>
    <length>255</length>
</CustomField>