orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Financial_Account__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration/Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Individual</fullName><default>false</default><label>Individual</label></value>
            <value><fullName>JTWROS</fullName><default>false</default><label>Joint Tenants (JTWROS)</label></value>
            <value><fullName>TIC</fullName><default>false</default><label>Tenants in Common (TIC)</label></value>
            <value><fullName>Community Property</fullName><default>false</default><label>Community Property</label></value>
            <value><fullName>Trust</fullName><default>false</default><label>Trust</label></value>
            <value><fullName>TOD</fullName><default>false</default><label>Transfer on Death (TOD)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>